--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="please_login">Please Login</string>
     <string name="create_account">Create Account</string>
     <string name="login">Login</string>
+    <string name="submit">Submit</string>
 </resources>
