--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,13 @@
     <string name="create_account">Create Account</string>
     <string name="login">Login</string>
     <string name="submit">Submit</string>
+    <string name="home">Home</string>
+    <string name="games">Games</string>
+    <string name="draw">Draw</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="friends">Friends</string>
+    <string name="type_draw">DRAW</string>
+    <string name="type_guess">GUESS</string>
+    <string name="turn_number">Turn No. </string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
