--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,15 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="clear">Clear</string>
+    <string name="one"/>
+    <string name="two"/>
+    <string name="three"/>
+    <string name="four"/>
+    <string name="five"/>
+    <string name="six"/>
+    <string name="seven"/>
+    <string name="eight"/>
+    <string name="nine"/>
+    <string name="ten"/>
 </resources>
