Added max guesses

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="eight"/>
     <string name="nine"/>
     <string name="ten"/>
+    <string name="guess">Guess</string>
 </resources>
