Can now challenge a person to a game from your friends list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="ten" />
     <string name="guess">Guess</string>
     <string name="choose_your_next_word">Choose Your Next Word</string>
+    <string name="challenge">Challenge</string>
+    <string name="remove">Remove</string>
 </resources>
